--- a/style.css
+++ b/style.css
@@ -2,6 +2,54 @@ html{
     font-family: Helvetica, sans-serif;
 }
 
+.container{
+    margin: 0 auto;
+    display: flex;
+    overflow-x: scroll;
+    padding: 10px;
+    width: 95vw;
+    scroll-snap-type: x mandatory;
+    scroll-padding: 24px;
+    border-radius: 8px;
+    gap: 12px;
+    border: 1px solid black;
+    background-color: #121212;
+}
+
+.container .item{
+    flex: 0 0 100%;
+    padding: 10px;
+    border-radius: 8px;
+    scroll-snap-align: start;
+    border: 1px solid grey;
+    width: 15vw;
+    min-width: 100px;
+    max-width: 400px;
+    background-color: grey;
+}
+
+.container .itemSmall{
+    width: 50px;
+    border: 1px solid grey;
+    background-color: grey;
+    
+}
+
+.rotated{
+    transform: rotate(-90deg);
+    margin-top: 10vw;
+}
+
+.displayimg{
+    width: 100%;
+    border: 4px solid #121212;
+}
+
+.imgdescrip{
+    font-style:italic;
+}
+
+/*
 .products{
     width: 100%;
     float: left;
@@ -9,16 +57,6 @@ html{
     border-radius: 20px;
     margin: 20px;
     background-color: rgba(212,212,202,0.4);
-}
-
-.producttext{
-    display: block;
-    font-weight: 200;
-    font-style: italic;
-    font-size: 16px;
-    margin: 10px;
-    padding: 10px;
-
 }
 
 .gamsu{
@@ -56,3 +94,4 @@ html{
     color: rgba(255,255,255,0.6);
     font-weight: 500;
 }
+*/
