--- a/style.css
+++ b/style.css
@@ -2,61 +2,56 @@ html{
     font-family: Helvetica, sans-serif;
 }
 
-.container{
+.product{
+    width: 80vw;
+    margin: 0 auto;
+    max-width: 1024px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.halfdisplay{
+    width: 50%;
+    float: left;
+    margin-bottom: 10px;
+}
+
+.containerslide {
     margin: 0 auto;
     display: flex;
     overflow-x: scroll;
     padding: 10px;
-    width: 95vw;
+    width: 100%;
     scroll-snap-type: x mandatory;
     scroll-padding: 24px;
     border-radius: 8px;
     gap: 12px;
     border: 1px solid black;
-    background-color: #121212;
+    box-shadow: 5px 10px black;
 }
 
-.container .item{
+.containerslide .item{
     flex: 0 0 100%;
-    padding: 10px;
+    padding: 20px;
     border-radius: 8px;
     scroll-snap-align: start;
-    border: 1px solid grey;
-    width: 15vw;
-    min-width: 100px;
-    max-width: 400px;
-    background-color: grey;
-}
-
-.container .itemSmall{
-    width: 50px;
-    border: 1px solid grey;
-    background-color: grey;
+    background-color: white;
+    max-width: 75%;
+    border: 1px solid black;
     
 }
 
-.rotated{
-    transform: rotate(-90deg);
-    margin-top: 10vw;
-}
-
 .displayimg{
-    width: 100%;
+    width: 300px;
     border: 4px solid #121212;
 }
 
-.imgdescrip{
-    font-style:italic;
+.displayimgheader{
+    width: 100%;
 }
 
-/*
-.products{
-    width: 100%;
-    float: left;
-    border: 0.5px solid #8D8D87;
-    border-radius: 20px;
-    margin: 20px;
-    background-color: rgba(212,212,202,0.4);
+.imgdescrip{
+    font-size: 12px;
 }
 
 .gamsu{
@@ -94,4 +89,3 @@ html{
     color: rgba(255,255,255,0.6);
     font-weight: 500;
 }
-*/
