--- a/style.css
+++ b/style.css
@@ -2,90 +2,50 @@ html{
     font-family: Helvetica, sans-serif;
 }
 
-.product{
+.headerbox{
+    display: flex;
+    width: 100%;
+    border-bottom: 2px solid black;
+    padding: 5px 0;
+    margin: 5px 0;
+}
+
+.headerinfo{
+    margin: auto;
+}
+
+.headertext{
+    height: 100%;
+    font-size: 25px;
+    display: inline-block;
+}
+
+.headerimg{
+    height: 35px;
+    width: 35px;
+    float: left;
+    padding: 5px;
+}
+
+.logo{
+    width:100%;
+    height: 100%;
+}
+
+
+.main{
     width: 80vw;
     margin: 0 auto;
-    max-width: 1024px;
+    max-width: 1920px;
     padding: 10px;
     margin-bottom: 10px;
-}
-
-.halfdisplay{
-    width: 50%;
-    float: left;
-    margin-bottom: 10px;
-}
-
-.containerslide {
-    margin: 0 auto;
     display: flex;
-    overflow-x: scroll;
-    padding: 10px;
+}
+
+.banner{
+    padding: 5px;
+}
+
+.bannerimg{
     width: 100%;
-    scroll-snap-type: x mandatory;
-    scroll-padding: 24px;
-    border-radius: 8px;
-    gap: 12px;
-    border: 1px solid black;
-    box-shadow: 5px 10px black;
-}
-
-.containerslide .item{
-    flex: 0 0 100%;
-    padding: 20px;
-    border-radius: 8px;
-    scroll-snap-align: start;
-    background-color: white;
-    max-width: 75%;
-    border: 1px solid black;
-    
-}
-
-.displayimg{
-    width: 300px;
-    border: 4px solid #121212;
-}
-
-.displayimgheader{
-    width: 100%;
-}
-
-.imgdescrip{
-    font-size: 12px;
-}
-
-.gamsu{
-    font-family: "FontAwesome", Calibri;
-    background-color: rgba(212,212,202,1);
-    color: #8D8D87;
-    font-weight: 500;
-    font-size: 20px;
-    padding: 10px;
-    margin: 10px;
-    line-height: 20px; 
-    border-radius: 5px;
-    border: 0.5px solid #8D8D87;
-}
-
-.gamsu:visited{
-    color: #8D8D87;
-    font-weight: 500;
-}
-
-.cardstocks{
-    font-family: 'Gill Sans MT';
-    color: rgba(255,255,255,0.6);
-    background-color: #121212;
-    font-weight: 500;
-    font-size: 20px;
-    padding: 10px;
-    margin: 10px;
-    line-height: 20px; 
-    border-radius: 5px;
-    border: 0.5px solid #8D8D87;
-}
-
-.cardstocks:visited{
-    color: rgba(255,255,255,0.6);
-    font-weight: 500;
 }
