--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html{
-    font-family: Helvetica, sans-serif;
+    font-family: Verdana, sans-serif;
 }
 
 .headerbox{
@@ -42,20 +42,27 @@ html{
 }
 
 .banner{
-    padding: 5px;
     width: 100%;
     display: block;
     margin: 0 auto;
     max-width: calc(1080px/3);
+    padding: 5px 0;
 }
 
 .bannerimg{
     width: 100%;
 }
 
+.bannerimg:hover{
+    filter: grayscale(95%);
+    -webkit-filter: grayscale(95%);
+    -moz-filter: grayscale(95%);
+    opacity: 0.6;
+}
+
 @media (min-width: 992px){
     .banner{
-        width: 31%;
+        width: 33.3%;
     }
 
     .main{
