--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 html{
     font-family: Verdana, sans-serif;
+    background-color: #001220;
+    color: #599788;
 }
 
 .headerbox{
     display: flex;
     width: 100%;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #599788;
     padding: 5px 0;
     margin: 5px 0;
 }
@@ -18,6 +20,7 @@ html{
     height: 25px;
     font-size: 25px;
     display: inline-block;
+    font-weight: 700;
 }
 
 .headerimg{
